# cc-audit

./: .actrc  .cc-audit.yaml  .commitlintrc.json  .dockerignore  .gitignore  .mcp.json  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deny.toml  justfile  release-please-config.json  rust-toolchain.toml
.claude/commands/: fix-ci.md
.githooks/: commit-msg  pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  false_positive.md  feature_request.md  new_rule.md
.github/actions/: README.md
.github/workflows/: cargo-install-test.yml  ci.yml  commitlint.yml  cve-update.yml  example-cc-audit.yml.example  fuzz.yml  homebrew-update.yml  msrv.yml  mutation.yml  npm-install-test.yml  npm-publish.yml  performance.yml  release-please.yml  release.yml  security.yml  self-audit.yml  semver.yml  stale.yml  terraform.yml
benches/: scan_benchmark.rs
data/: cve-database.json  malware-signatures.json
docs/: ARCHITECTURE.md  BRANCHING.md  CI.ja.md  CI.md  CI_ERROR_HANDLING.md  CLI.ja.md  CLI.md  CONFIGURATION.ja.md  CONFIGURATION.md  CVE-UPDATE.ja.md  CVE-UPDATE.md  DISTRIBUTION.ja.md  DISTRIBUTION.md  FEATURES.ja.md  FEATURES.md  GITHUB_ACTIONS_ARCHITECTURE.md  INTEGRATION.ja.md  INTEGRATION.md  MCP.ja.md  MCP.md  README.ja.md  RULES.ja.md  RULES.md
examples/: README.md
examples/bypass-attempts/: README.md
examples/clean/: SKILL.md
examples/dependency/: dangerous-Cargo.toml  dangerous-package.json  dangerous-requirements.txt  safe-package.json
examples/docker/: Dockerfile  docker-compose.yml
examples/edge-cases/: SKILL.md
examples/exfiltration/: SKILL.md
examples/false-positives/: SKILL.md
examples/github-actions/: cc-audit-sarif.yml  cc-audit.yml
examples/gitlab-ci/: .gitlab-ci.yml
examples/hook/: dangerous-settings.json  safe-settings.json
examples/mcp/: dangerous-mcp.json  safe-mcp.json
examples/obfuscation/: SKILL.md
examples/overpermission/: SKILL.md
examples/persistence/: SKILL.md
examples/plugin/: marketplace.json  plugin.json
examples/pre-commit/: README.md
examples/privilege-escalation/: SKILL.md
examples/prompt-injection/: SKILL.md
examples/rules/: custom-rules.yaml  test-content.md
examples/secrets/: SKILL.md
examples/supply-chain/: SKILL.md
infra/github/: .terraform.lock.hcl  README.md  branch_protection.tf  outputs.tf  repository.tf  tag_protection.tf  variables.tf
npm/cc-audit/: README.md  package.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64-musl/: package.json
scripts/: update-cve-database.py
src/: baseline.rs  cli.rs  client.rs  config.rs  context.rs  cve_db.rs  deobfuscation.rs  error.rs  fix.rs  handlers.rs  homoglyph.rs  hooks.rs  ignore.rs  lib.rs  line_join.rs  main.rs  malware_db.rs  mcp_server.rs  pinning.rs  profile.rs  run.rs  scoring.rs  suppression.rs  test_utils.rs  trusted_domains.rs  watch.rs
tests/: e2e_comprehensive.rs  integration.rs  scanner_coverage_contract.rs  security.rs
xtask/: Cargo.toml
(+332 files in other folders)
