[workspace]
members = [".", "xtask"]

[package]
name = "cc-audit"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Security auditor for Claude Code skills, hooks, and MCP servers"
repository = "https://github.com/ryoppippi/cc-audit"
keywords = ["claude", "security", "audit", "mcp", "skills"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
regex = "1"
walkdir = "2"
thiserror = "2"
colored = "3"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
insta = "1"
