[workspace]
members = [".", "xtask"]

[package]
name = "cc-audit"
version = "3.0.0"
edition = "2024"
license = "MIT"
description = "Security auditor for Claude Code skills, hooks, and MCP servers"
repository = "https://github.com/ryo-ebata/cc-audit"
keywords = ["claude", "security", "audit", "mcp", "skills"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
regex = "1"
walkdir = "2"
thiserror = "2"
colored = "3"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
ignore = "0.4"
notify = "8"
semver = "1"
toml = "0.8"
dirs = "6.0.0"
sha2 = "0.10.9"
base64 = "0.22.1"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
insta = { version = "1", features = ["json"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scan_benchmark"
harness = false

# Coverage configuration
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
